--- a/public/index.html
+++ b/public/index.html
@@ -39,21 +39,21 @@
                   Ciudad:
                     <select id="ciudad">
                       <option value="" selected>Escoge una ciudad</option>
-                      <option value="1">New York</option>
-                      <option value="2">Orlando</option>
-                      <option value="3">Los Angeles</option>
-                      <option value="4">Houston</option>
-                      <option value="5">Washington</option>
-                      <option value="6">Miami</option>
+                      <option value="New York">New York</option>
+                      <option value="Orlando">Orlando</option>
+                      <option value="Los Angeles">Los Angeles</option>
+                      <option value="Houston">Houston</option>
+                      <option value="Washington">Washington</option>
+                      <option value="Miami">Miami</option>
                     </select>
                 </div>
                 <div class="row">
                   Tipo:
                   <select id="tipo">
                     <option value="" selected>Escoge un tipo</option>
-                    <option value="3">Apartamento</option>
-                    <option value="1">Casa</option>
-                    <option value="2">Casa de campo</option>
+                    <option value="Apartamento">Apartamento</option>
+                    <option value="Casa">Casa</option>
+                    <option value="Casa de campo">Casa de campo</option>
                   </select>
                 </div>
                 <div class="row">
